Agent Report and revenue

--- a/public/back/assets/css/components/cards/card.css
+++ b/public/back/assets/css/components/cards/card.css
@@ -211,7 +211,7 @@
 
 .component-card_6 {
     border-radius: 8px;
-    background: #fff;
+    background: #c504b5;
     border: 1px solid #e0e6ed;
     width: 19rem;
     margin: 0 auto;
