last commit with customer list

--- a/public/front/css/game.css
+++ b/public/front/css/game.css
@@ -16,7 +16,9 @@
         width: 100%;
         display: block;
     }
-	 
+	 .completedImage{
+         width:100%;
+     }
   }
 .radio_button{
     width:32px;
