--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -18,7 +18,7 @@
 	position:fixed;
 	top:1rem; 
 	right: 1rem;
-	z-index: 999999999999999999;
+	z-index: 999999;
 }
 .lang ul li{
 	border:2px solid #f36e6e;
@@ -26,7 +26,7 @@
 	border-radius: 10px;
 	color: white;
 	margin-left:1rem;
-	float: left;
+	display: inline;
 }
 
 
@@ -77,7 +77,7 @@
 
 .my-container{
 
-	z-index: 9999999999;
+	z-index: 9999999;
 	position: fixed;
 	top: 0;
 	display: none;
@@ -2069,10 +2069,14 @@ background-size: cover;
 		display: block;
 		height: auto;
 	}
-
+#closedIcon {
+	display: none;
+}
 	.item-expander .cls-btn .close {
+
 		position:relative;
 		display: inline-block;
+		
 		color:#8b8b8b;
 		top:0;
 		margin:0 auto;
